--- a/src/main/resources/static/css/output.css
+++ b/src/main/resources/static/css/output.css
@@ -749,79 +749,6 @@ select {
   outline: 1px auto -webkit-focus-ring-color;
 }
 
-a {
-  cursor: default;
-}
-
-nav {
-  margin-left: auto;
-  margin-right: auto;
-  height: 3rem;
-  width: 100%;
-}
-
-@media (min-width: 640px) {
-  nav {
-    width: 75%;
-  }
-}
-
-@media (min-width: 768px) {
-  nav {
-    width: 50%;
-  }
-}
-
-@media (min-width: 1024px) {
-  nav {
-    width: 50%;
-  }
-}
-
-@media (min-width: 1280px) {
-  nav {
-    width: 50%;
-  }
-}
-
-header {
-  position: fixed;
-  /* Fix the header to the top of the viewport */
-  top: 0;
-  /* Align it to the top */
-  left: 0;
-  width: 100%;
-  /* Full width of the viewport */
-  z-index: 1000;
-  /* Ensure it stays above other elements */
-  background-color: white;
-  /* Optional: Set a background color */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  /* Optional: Add a shadow for better visibility */
-}
-
-footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  z-index: 9999;
-  /* Higher than the fullscreen class */
-  background-color: white;
-  box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
-}
-
-html, body#scrollablePage {
-  overflow: auto;
-  height: auto;
-}
-
-body {
-  overflow: hidden;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-}
-
 .container {
   width: 100%;
 }
@@ -1541,8 +1468,32 @@ body {
   right: 0.5rem;
 }
 
+.top-0 {
+  top: 0px;
+}
+
+.top-12 {
+  top: 3rem;
+}
+
+.top-24 {
+  top: 6rem;
+}
+
+.top-36 {
+  top: 9rem;
+}
+
+.bottom-12 {
+  bottom: 3rem;
+}
+
 .z-20 {
   z-index: 20;
+}
+
+.z-10 {
+  z-index: 10;
 }
 
 .col-span-1 {
@@ -1585,6 +1536,11 @@ body {
   margin-bottom: 0.5rem;
 }
 
+.my-12 {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
 .mb-1 {
   margin-bottom: 0.25rem;
 }
@@ -1611,6 +1567,14 @@ body {
 
 .mt-8 {
   margin-top: 2rem;
+}
+
+.mb-12 {
+  margin-bottom: 3rem;
+}
+
+.mt-12 {
+  margin-top: 3rem;
 }
 
 .block {
@@ -1673,9 +1637,17 @@ body {
   height: 100vh;
 }
 
+.h-36 {
+  height: 9rem;
+}
+
 .min-h-fit {
   min-height: -moz-fit-content;
   min-height: fit-content;
+}
+
+.min-h-screen {
+  min-height: 100vh;
 }
 
 .w-10 {
@@ -1712,6 +1684,10 @@ body {
 
 .flex-shrink-0 {
   flex-shrink: 0;
+}
+
+.flex-grow {
+  flex-grow: 1;
 }
 
 .cursor-pointer {
@@ -1896,6 +1872,11 @@ body {
   background-color: rgb(37 99 235 / var(--tw-bg-opacity, 1));
 }
 
+.bg-orange-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(194 65 12 / var(--tw-bg-opacity, 1));
+}
+
 .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
@@ -1939,6 +1920,26 @@ body {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-yellow-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 179 8 / var(--tw-bg-opacity, 1));
+}
+
+.bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity, 1));
+}
+
+.bg-purple-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(168 85 247 / var(--tw-bg-opacity, 1));
+}
+
+.bg-red-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 242 242 / var(--tw-bg-opacity, 1));
 }
 
 .bg-opacity-70 {
@@ -2183,12 +2184,6 @@ body {
 .placeholder-gray-400::placeholder {
   --tw-placeholder-opacity: 1;
   color: rgb(156 163 175 / var(--tw-placeholder-opacity, 1));
-}
-
-.shadow {
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .shadow-sm {
